--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
 @import '/styles/first-page.css';
 @import '/styles/header.css';
 @import '/styles/check-the-born-year.css';
+@import '/styles/guess-the-number.css'
