three new games added

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,4 +3,7 @@
 @import '/styles/check-the-born-year.css';
 @import '/styles/guess-the-number.css';
 @import '/styles/paper-rock-sizors.css';
-@import '/styles/calculator.css'
+@import '/styles/calculator.css';
+@import '/styles/calculator-of-time.css';
+@import '/styles/three-numbers.css';
+@import '/styles/pick-the-scientist.css'
