--- a/styles/style.css
+++ b/styles/style.css
@@ -6,4 +6,7 @@
 @import '/styles/calculator.css';
 @import '/styles/calculator-of-time.css';
 @import '/styles/three-numbers.css';
-@import '/styles/pick-the-scientist.css'
+@import '/styles/pick-the-scientist.css';
+@import '/styles/dino.css';
+@import '/styles/our-team.css';
+@import '/styles/soccer.css'
